test/equality/negative/comp_wrong_arg_number.mli
val f : int -> int -> int -> int
(*@ comparison *)
